todo-app/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
        - name: todoapp
          image: roslinmahmud/todo-app:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 10
          volumeMounts:
            - name: files-volume
              mountPath: /app/files
      volumes:
        - name: files-volume
          persistentVolumeClaim:
            claimName: todo-pvc
